# faber-studio

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.agent/: README.md
.agent/documents/: ARCHITECTURE.md  ROADMAP.md  UI_STYLE.md  commit-message-instructions.md  tauri-mobile-layered-responsibility.md  tauri-mobile-native-sdk.md
.agent/profiles/: shared-lib.md  tauri-app.md  unity-mobile.md
.agent/rules/backend/: async-patterns.md  error-handling.md  python-scripting.md  rust-safety.md
.agent/rules/desktop/: filesystem-safety.md  long-running-stability.md  process-and-terminal-visibility.md  ui-responsiveness.md  update-and-migration.md
.agent/rules/frontend/: react-patterns.md  state-management.md  tauri-constraints.md  ui-performance.md
.agent/rules/game/: game-architecture.md  gameplay-code-style.md  performance-model.md  unity-architecture.md  web-game-architecture.md
.agent/rules/global/: ai-behavior.md  coding-philosophy.md  documentation.md  naming-conventions.md
.agent/rules/mobile/: app-lifecycle-and-process-death.md  (+6 more)
apps/desktop/: README.md  check_output.txt  check_output_utf8.txt  package.json
apps/desktop/src-tauri/: Cargo.toml  build_error.txt  errors.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: errors.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: assets.rs  config.rs  env_check.rs  git.rs  mobile.rs  mod.rs  project_init.rs  quick_commands.rs  runner.rs  search.rs
apps/desktop/src-tauri/src/models/: mod.rs
(+80 files in other folders)
