[package]
name = "Faber"
version = "0.0.1"
description = "Faber Studio"
authors = ["h1dr0n"]
license = "MIT"
repository = "https://github.com/h1dr0nn/faber-studio"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "faber_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
walkdir = "2.5"
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.0", features = ["v4"] }
image = "0.25"
ico = "0.3"
icns = "0.3"
glob = "0.3"



